[gd_scene load_steps=6 format=3 uid="uid://u7o5xg1r857e"]

[ext_resource type="PackedScene" uid="uid://bqxqwgyntd1sv" path="res://Scenes/background.tscn" id="1_4g6ul"]
[ext_resource type="PackedScene" uid="uid://bnvybgkcvf330" path="res://Scenes/player.tscn" id="1_8s267"]
[ext_resource type="Script" uid="uid://de75gpy3i0spv" path="res://Scripts/game.gd" id="1_pidfq"]
[ext_resource type="Texture2D" uid="uid://1lepkkiqv817" path="res://Sprites/restart.png" id="4_pidfq"]

[sub_resource type="Curve2D" id="Curve2D_4g6ul"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -61, -63, 0, 0, 0, 0, 1205, -63, 0, 0, 0, 0, 1207, 809, 0, 0, 0, 0, -61, 809, 0, 0, 0, 0, -62, -55)
}
point_count = 5

[node name="game" type="Node2D"]
script = ExtResource("1_pidfq")

[node name="player" parent="." instance=ExtResource("1_8s267")]
position = Vector2(595, 357)

[node name="Path2D" type="Path2D" parent="player"]
position = Vector2(-396.667, -238)
scale = Vector2(0.666667, 0.666667)
curve = SubResource("Curve2D_4g6ul")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]
unique_name_in_owner = true
position = Vector2(-61, -63)

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="Background" parent="Background" instance=ExtResource("1_4g6ul")]
z_index = -1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "GAME OVER"

[node name="Button" type="Button" parent="GameOverScreen"]
offset_left = 511.0
offset_top = 351.0
offset_right = 775.0
offset_bottom = 487.0
scale = Vector2(0.474804, 0.349187)
icon = ExtResource("4_pidfq")

[connection signal="health_depleted" from="player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOverScreen/Button" to="." method="_on_button_pressed"]
